src/examples/errors/bad_expression_char_mix.del


def main() -> int {

    char my_char = "J";

    int some_int = 3.33;

    return 0;
}